test/valid/MethodIdEqPrimitiveObject/MethodIdEqPrimitiveObject.plume
/**
 * @author Diogo Marques, 30100
 */
class MethodIdEqPrimitiveObject extends Object is
	method Object : () -> String is
		"Object"
	
	method main : () -> String is
		new MethodIdEqPrimitiveObject().Object()
		
	